--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.AppCompat.DayNight"
         tools:targetApi="31">
         <activity
+            android:name=".activities.AddSubjectActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.GeneralInformationActivity"
             android:exported="false" />
         <activity
