--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,16 @@
         android:theme="@style/Theme.AppCompat.DayNight"
         tools:targetApi="31">
         <activity
+            android:name=".activities.healthcondition.SingleHealthConditionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.healthcondition.HealthConditionActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.AddSubjectActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.GeneralInformationActivity"
+            android:name=".activities.generalinformation.GeneralInformationActivity"
             android:exported="false" />
         <activity
             android:name=".activities.SubjectActivity"
